--- a/Notebooks/Rando_Tshilo_Dikotla_Participants.ipynb
+++ b/Notebooks/Rando_Tshilo_Dikotla_Participants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "87f4547f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "13e1af9d",
    "metadata": {},
    "outputs": [],
@@ -22,15 +22,30 @@
     "import pandas as pd\n",
     "from django.core.exceptions import ValidationError\n",
     "os.environ[\"DJANGO_ALLOW_ASYNC_UNSAFE\"] = \"true\"\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "import csv\n",
+    "from django_pandas.io import read_frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "47349c32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Consented Caregivers:  1053\n",
+      "Total TD Caregivers:  388\n",
+      "Total TD HUU Caregivers:  114\n",
+      "Total TD Consented HUU:  47\n",
+      "Total TD Not Consented HUU:  67\n",
+      "Total TD Offstudy:  0\n"
+     ]
+    }
+   ],
    "source": [
     "consents_pids = SubjectConsent.objects.values_list('screening_identifier', flat=True).distinct()\n",
     "\n",
@@ -48,24 +63,43 @@
     "                                      mom_hivstatus='HIV-uninfected').exclude(\n",
     "    screening_identifier__in=consents_pids)\n",
     "\n",
-    "td_uncosent_md_pids = td_uncosent_md.values_list('study_maternal_identifier', flat=True)\n"
+    "print(\"Total Consented Caregivers: \", len(consents_pids))\n",
+    "print(\"Total TD Caregivers: \", td_md.count())\n",
+    "print(\"Total TD HUU Caregivers: \", len(td_huu_md_pids))\n",
+    "print(\"Total TD Consented HUU: \", len(consented_md_pids))\n",
+    "print(\"Total TD Not Consented HUU: \", len(td_uncosent_pids))\n",
+    "print(\"Total TD Offstudy: \", len(offstudy))\n",
+    "\n",
+    "\n",
+    "data = [\n",
+    "    ['total_td_huu.csv', td_huu_md_pids],\n",
+    "    ['total_consented_td_huu.csv',  consented_md_pids],\n",
+    "    ['total_not_consented_td_huu.csv', td_uncosent_pids],\n",
+    "    ['total_offstudy_td_huu.csv', offstudy]\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "1eaa39b5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "67"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total in the worklist:  114\n",
+      "Total randomised TD HUU:  72\n",
+      "Total Not Randomised TD HUU:  0\n",
+      "Total missing from worklist:  0\n"
+     ]
     }
    ],
    "source": [
@@ -87,16 +121,36 @@
     "td_unconsent_log_entries = LogEntry.objects.filter(study_maternal_identifier__in=td_uncosent_md_pids)\n",
     "td_unconsent_log_entries.count()\n",
     "\n",
+    "data_rando_dict = [\n",
+    "    worklist,randomised_worklist, final_not_randomised_worklist, missing_worklist_identifiers]\n",
     "\n",
-    "df = pd.DataFrame([td.__dict__ for td in td_unconsent_log_entries ])\n",
-    "# df.to_csv('/Users/imosweu/td_unconsented.csv', encoding='utf-8')\n",
-    "df.to_csv('/home/flourish/td_unconsented.csv', encoding='utf-8')"
+    "print(\"Total in the worklist: \", len(worklist))\n",
+    "print(\"Total randomised TD HUU: \", len(randomised_worklist))\n",
+    "print(\"Total Not Randomised TD HUU: \", len(final_not_randomised_worklist))\n",
+    "print(\"Total missing from worklist: \", len(missing_worklist_identifiers))\n",
+    "\n",
+    "# importing library\n",
+    "import csv\n",
+    " \n",
+    "    \n",
+    "data = [\n",
+    "    ['total_worklist_td_huu.csv', worklist],\n",
+    "    ['total_randomised_td_huu.csv', randomised_worklist],\n",
+    "    ['total_not_randomised_td_huu.csv', final_not_randomised_worklist],\n",
+    "    ['total_missing_worklist.csv', missing_worklist_identifiers]\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ba991d0",
+   "execution_count": 66,
+   "id": "32c598af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,26 +163,37 @@
     "\n",
     "success_log_entries_ids = success_log_entries.values_list('study_maternal_identifier', flat=True)\n",
     "\n",
-    "success_df = pd.DataFrame([td.__dict__ for td in success_log_entries ])\n",
-    "# df.to_csv('/Users/imosweu/td_unconsented.csv', encoding='utf-8')\n",
-    "success_df.to_csv('/home/flourish/td_unconsent_success_contact.csv', encoding='utf-8')\n",
-    "success_log_entries.count()\n"
+    "print(\"Attempts made: \", len(attempt_identifiers))\n",
+    "print('No Attempts: ', len(not_attempted))\n",
+    "\n",
+    "\n",
+    "data = [\n",
+    "    ['total_attempts_td_huu.csv', attempt_identifiers],\n",
+    "    ['total_notattempted_td_huu.csv',  not_attempted],\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "06663dba",
+   "execution_count": 67,
+   "id": "1bbec2dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "e2e4d94a",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TD HUU Continued Contact:  21\n",
+      "TD HUU Not COntinued Contact Not Consented:  46\n"
+     ]
+    }
+   ],
    "source": [
     "#Final decline\n",
     "declined = LogEntry.objects.filter(study_maternal_identifier__in=success_log_entries_ids,\n",
@@ -137,52 +202,88 @@
     "declined_ids = declined.values_list('study_maternal_identifier', flat=True)\n",
     "\n",
     "\n",
-    "final_decline = []\n",
-    "for a in declined_ids:\n",
-    "    dec_logs = LogEntry.objects.filter(study_maternal_identifier=a)\n",
-    "    for d in dec_logs:\n",
-    "        try:\n",
-    "            LogEntry.objects.get(study_maternal_identifier=d.study_maternal_identifier,\n",
-    "                                 call_datetime__gt=d.call_datetime, appt='Yes')\n",
-    "        except LogEntry.DoesNotExist:\n",
-    "            final_decline.append(d)\n",
-    "            \n",
-    "declined_df = pd.DataFrame([td.__dict__ for td in final_decline ])\n",
-    "declined_df.to_csv('/home/flourish/td_declined_contact.csv', encoding='utf-8')\n",
+    "# All not continued contract and not consented\n",
     "\n",
-    "len(final_decline)"
+    "not_continued_contact_not_consented = list(set(td_uncosent_pids)-set(continued_contact))\n",
+    "\n",
+    "qs = LogEntry.objects.filter(study_maternal_identifier__in=not_continued_contact_not_consented)\n",
+    "\n",
+    "qs_data = []\n",
+    "\n",
+    "for obj in qs:\n",
+    "    obj_dict = obj.__dict__\n",
+    "    del obj_dict['_state']\n",
+    "    del obj_dict['device_created']\n",
+    "    del obj_dict['device_modified']\n",
+    "    del obj_dict['modified']\n",
+    "    del obj_dict['created']\n",
+    "    del obj_dict['revision']    \n",
+    "    del obj_dict['user_created']\n",
+    "    del obj_dict['user_modified']\n",
+    "    del obj_dict['hostname_created']\n",
+    "    del obj_dict['hostname_modified']\n",
+    "    del obj_dict['log_id']\n",
+    "    \n",
+    "    qs_data.append(obj_dict)\n",
+    "\n",
+    "df = pd.DataFrame(qs_data)\n",
+    "df.to_csv('log_entries_no_consent_not_continued_contact.csv', sep=',', encoding='utf-8')\n",
+    "\n",
+    "\n",
+    "data_attemps_dict = {'TD HUU Continued Contact': len(continued_contact)}\n",
+    "\n",
+    "print('TD HUU Continued Contact: ', len(continued_contact))\n",
+    "print('TD HUU Not COntinued Contact Not Consented: ', len(not_continued_contact_not_consented))\n",
+    "\n",
+    "data = [\n",
+    "    ['total_continued_contact_td_huu.csv', continued_contact],\n",
+    "    ['total_no_concent_not_continued_contact_td_huu.csv', not_continued_contact_not_consented]\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d23d406e",
+   "execution_count": 68,
+   "id": "4ba991d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TD HUU Unreacheble:  0\n"
+     ]
+    }
+   ],
    "source": [
     "may_not_call = LogEntry.objects.filter(study_maternal_identifier__in=success_log_entries_ids,\n",
     "                                       may_call__icontains='no_')\n",
     "\n",
     "may_not_call_ids = may_not_call.values_list('study_maternal_identifier', flat=True)\n",
     "\n",
-    "final_may_not_call = []\n",
-    "for m in may_not_call_ids:\n",
-    "    dec_logs = LogEntry.objects.filter(study_maternal_identifier=m)\n",
-    "    for d in dec_logs:\n",
-    "        try:\n",
-    "            LogEntry.objects.get(study_maternal_identifier=d.study_maternal_identifier,\n",
-    "                                 call_datetime__gt=d.call_datetime, may_call__icontains='no_')\n",
-    "        except LogEntry.DoesNotExist:\n",
-    "            final_may_not_call.append(d)\n",
-    "            \n",
-    "final_may_not_call_df = pd.DataFrame([td.__dict__ for td in final_may_not_call ])\n",
-    "final_may_not_call_df.to_csv('/home/flourish/td_final_may_not_call.csv', encoding='utf-8')"
+    "print('TD HUU Unreacheble: ', len(unreacheble))\n",
+    "\n",
+    "data = [\n",
+    "    ['total_unreacheble_td_huu.csv', unreacheble]\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69ac3621",
+   "execution_count": 69,
+   "id": "06663dba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -201,9 +302,21 @@
     "\n",
     "unsucessful_log_entries.count()\n",
     "\n",
-    "unsuccess_df = pd.DataFrame([td.__dict__ for td in unsucessful_log_entries ])\n",
-    "# df.to_csv('/Users/imosweu/td_unconsented.csv', encoding='utf-8')\n",
-    "unsuccess_df.to_csv('/home/flourish/td_unsuccess_contact.csv', encoding='utf-8')"
+    "# Merge the 2 above lists\n",
+    "identifiers = screened_identifiers + declined_do_not_call\n",
+    "identifiers = list(set(identifiers) - set(consented_md_pids))\n",
+    "\n",
+    "print('TD HUU Declined: ', len(identifiers))\n",
+    "\n",
+    "data = [\n",
+    "    ['total_declined_td_huu.csv', identifiers]\n",
+    "]\n",
+    "\n",
+    "for d in data:\n",
+    "    with open(d[0], 'w') as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        for val in d[1]:\n",
+    "            writer.writerow([val])"
    ]
   },
   {
@@ -233,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3501c34c",
+   "id": "4c84ee6a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -241,7 +354,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6426c06b",
+   "id": "4169af5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651c968b",
    "metadata": {},
    "outputs": [],
    "source": []
