--- a/flourish/notebooks/change_name_pid_0127-8.ipynb
+++ b/flourish/notebooks/change_name_pid_0127-8.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "for subject_consent in subject_consents:\n",
     "    subject_consent.last_name = last_name\n",
+    "    subject_consent.initials =initials\n",
     "    subject_consent.save()\n",
     "subject_locator.last_name = last_name\n",
     "subject_locator.save()\n",
