update sequential reports

--- a/Notebooks/sequential_enrol_reports.ipynb
+++ b/Notebooks/sequential_enrol_reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "a6caa311",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,13 @@
     "from django.db.models import F, Max, Case, When, Sum\n",
     "from edc_constants.constants import POS, NEG\n",
     "from flourish_caregiver.helper_classes import MaternalStatusHelper\n",
+    "from flourish_caregiver.helper_classes.schedule_dict import child_schedule_dict\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "e0576720",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "a248c328",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
+   "id": "d571ca1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_onschedule(subject_identifier, cohort):\n",
+    "    cohort_onschedules = [name_dict.get('name') for name_dict in child_schedule_dict.get(cohort).values()]\n",
+    "    onschedules = SubjectScheduleHistory.objects.onschedules(\n",
+    "        subject_identifier=subject_identifier)\n",
+    "    onschedules = [onsch for onsch in onschedules if onsch.schedule_name in cohort_onschedules]\n",
+    "    return bool(onschedules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "8a545d72",
    "metadata": {},
    "outputs": [
@@ -61,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1193/1193 [00:49<00:00, 24.33it/s]\n"
+      "100%|██████████| 1193/1193 [00:48<00:00, 24.64it/s]\n"
      ]
     }
    ],
@@ -88,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "ad932d00",
    "metadata": {},
    "outputs": [
@@ -156,7 +172,7 @@
        "4      cohort_b    204"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "4083e8cf",
    "metadata": {},
    "outputs": [
@@ -283,7 +299,7 @@
        "10      Cohort B  UNEXPOSED     74"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "2e8b29bc",
    "metadata": {},
    "outputs": [
@@ -302,115 +318,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1181/1181 [00:48<00:00, 24.52it/s]\n"
+      "100%|██████████| 1075/1075 [00:44<00:00, 24.00it/s]\n"
      ]
     }
    ],
    "source": [
-    "# Current cohort categorization\n",
-    "current_exposure_summary = defaultdict(lambda: defaultdict(int))\n",
-    "\n",
-    "qs = Cohort.objects.filter(\n",
-    "    subject_identifier=OuterRef('subject_identifier')).order_by('-assign_datetime')\n",
-    "latest_cohorts = Cohort.objects.filter(pk=Subquery(qs.values('pk')[:1]))\n",
-    "\n",
-    "# Overall counts\n",
-    "current_overall = latest_cohorts.values('name').annotate(count=Count('name'))\n",
-    "curr_overall_df = pd.DataFrame(list(current_overall))\n",
-    "\n",
-    "for cohort in tqdm(latest_cohorts):\n",
-    "    exposure = check_exposure(cohort.subject_identifier)\n",
-    "    cohort_name = convert_to_title_case(cohort.name)\n",
-    "    current_exposure_summary[cohort_name][exposure] += 1\n",
-    "\n",
-    "cuurent_summary = [{'cohort_name': name, 'exposure': exposure, 'count': count}\n",
-    "                   for name, exposures in current_exposure_summary.items()\n",
-    "                   for exposure, count in exposures.items()]\n",
-    "curr_summary_df = pd.DataFrame(cuurent_summary)"
+    "cohorts = ['cohort_a', 'cohort_b', 'cohort_c', 'cohort_a_sec', 'cohort_b_sec', 'cohort_c_sec']\n",
+    "report = []\n",
+    "for cohort in cohorts:\n",
+    "    cohort_name = convert_to_title_case(cohort)\n",
+    "    cohort_objs = Cohort.objects.filter(name=cohort, )\n",
+    "    exposed = 0\n",
+    "    unexposed = 0\n",
+    "    for cohort in tqdm(cohort_objs):\n",
+    "        onschedule = getattr(cohort, 'check_onschedule')\n",
+    "        if not onschedule:\n",
+    "            continue\n",
+    "        exposure = getattr(cohort, 'check_exposure')\n",
+    "        if exposure == 'EXPOSED':\n",
+    "            exposed += 1\n",
+    "        elif exposure == 'UNEXPOSED':\n",
+    "            unexposed += 1\n",
+    "    report.append({'cohort_name': cohort_name, 'unexposed': unexposed, 'exposed': exposed})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "1a7e69fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cohort_c_sec</td>\n",
-       "      <td>249</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>cohort_b</td>\n",
-       "      <td>223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cohort_c</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cohort_a</td>\n",
-       "      <td>318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>cohort_b_sec</td>\n",
-       "      <td>169</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           name  count\n",
-       "0  cohort_c_sec    249\n",
-       "1      cohort_b    223\n",
-       "2      cohort_c    222\n",
-       "3      cohort_a    318\n",
-       "4  cohort_b_sec    169"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "curr_overall_df"
+    "# curr_overall_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "fc8d9c28",
    "metadata": {},
    "outputs": [
@@ -445,88 +389,81 @@
        "      <th>0</th>\n",
        "      <td>Cohort C Sec</td>\n",
        "      <td>EXPOSED</td>\n",
-       "      <td>248</td>\n",
+       "      <td>243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Cohort C Sec</td>\n",
-       "      <td>UNEXPOSED</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Cohort C</td>\n",
+       "      <td>EXPOSED</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Cohort C</td>\n",
-       "      <td>EXPOSED</td>\n",
-       "      <td>122</td>\n",
+       "      <td>UNEXPOSED</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Cohort C</td>\n",
-       "      <td>UNEXPOSED</td>\n",
-       "      <td>100</td>\n",
+       "      <td>Cohort A</td>\n",
+       "      <td>ANC_UNK</td>\n",
+       "      <td>221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Cohort A</td>\n",
-       "      <td>ANC_UNK</td>\n",
-       "      <td>283</td>\n",
+       "      <td>EXPOSED</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Cohort A</td>\n",
-       "      <td>EXPOSED</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
        "      <td>Cohort A</td>\n",
        "      <td>UNEXPOSED</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>6</th>\n",
        "      <td>Cohort B Sec</td>\n",
        "      <td>EXPOSED</td>\n",
-       "      <td>166</td>\n",
+       "      <td>165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>7</th>\n",
        "      <td>Cohort B Sec</td>\n",
        "      <td>UNEXPOSED</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>Cohort B</td>\n",
        "      <td>EXPOSED</td>\n",
-       "      <td>172</td>\n",
+       "      <td>164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>Cohort B</td>\n",
        "      <td>UNEXPOSED</td>\n",
-       "      <td>51</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     cohort_name   exposure  count\n",
-       "0   Cohort C Sec    EXPOSED    248\n",
-       "1   Cohort C Sec  UNEXPOSED      1\n",
-       "2       Cohort C    EXPOSED    122\n",
-       "3       Cohort C  UNEXPOSED    100\n",
-       "4       Cohort A    ANC_UNK    283\n",
-       "5       Cohort A    EXPOSED     33\n",
-       "6       Cohort A  UNEXPOSED      2\n",
-       "7   Cohort B Sec    EXPOSED    166\n",
-       "8   Cohort B Sec  UNEXPOSED      3\n",
-       "9       Cohort B    EXPOSED    172\n",
-       "10      Cohort B  UNEXPOSED     51"
+       "    cohort_name   exposure  count\n",
+       "0  Cohort C Sec    EXPOSED    243\n",
+       "1      Cohort C    EXPOSED    100\n",
+       "2      Cohort C  UNEXPOSED     96\n",
+       "3      Cohort A    ANC_UNK    221\n",
+       "4      Cohort A    EXPOSED     32\n",
+       "5      Cohort A  UNEXPOSED      2\n",
+       "6  Cohort B Sec    EXPOSED    165\n",
+       "7  Cohort B Sec  UNEXPOSED      3\n",
+       "8      Cohort B    EXPOSED    164\n",
+       "9      Cohort B  UNEXPOSED     49"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "efbc2383",
    "metadata": {},
    "outputs": [],
@@ -572,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "f4029ff3",
    "metadata": {},
    "outputs": [
@@ -821,7 +758,7 @@
        "29     cohort_c_sec   cohort_b_sec      0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
