:green_heart: ci(script): "Refactor visit scheduling logic in redmine_7091 notebook"
The scheduling logic in the redmine_7091 notebook was refactored to simplify the code and make it more coherent. Instead of directly calling the 'put_on_schedule' function, an 'onschedule_helper_cls' is now used to fetch relevant scheduling data. This makes the code more flexible and adaptable to possible changes in the scheduling model's structure. Schedule visit code was also updated from a dynamic value to a hard-coded '2001M' for this specific use case. Lastly, scheduling details are now being saved in 'SubjectScheduleHistory'.

--- a/Notebooks/redmine_7091.ipynb
+++ b/Notebooks/redmine_7091.ipynb
@@ -191,7 +191,9 @@
    "execution_count": 19,
    "outputs": [],
    "source": [
-    "from flourish_caregiver.models.signals import put_on_schedule\n",
+    "\n",
+    "from edc_visit_schedule.models import SubjectScheduleHistory\n",
+    "from flourish_caregiver.models.signals import onschedule_helper_cls\n",
     "from edc_appointment.models import Appointment\n",
     "from flourish_caregiver.models import MaternalVisit\n",
     "\n",
@@ -212,7 +214,7 @@
     "\n",
     "for visit_code in visit_codes:\n",
     "    appointment = Appointment.objects.get(\n",
-    "        subject_identifier='B142-040990804-2', visit_code=visit_code,\n",
+    "        subject_identifier='B142-040990804-2', visit_code='2001M',\n",
     "        schedule_name='b_sec_quart1_schedule1')\n",
     "    appointment.delete()\n",
     "\n",
@@ -233,11 +235,33 @@
     "    subject_identifier=visit.subject_identifier,\n",
     "    schedule_name=apt.schedule_name)\n",
     "\n",
-    "put_on_schedule(\n",
-    "    cohort, instance=visit, subject_identifier=visit.subject_identifier,\n",
-    "    child_subject_identifier=onschedule_obj.child_subject_identifier,\n",
-    "    base_appt_datetime=visit.report_datetime.replace(microsecond=0),\n",
-    "    caregiver_visit_count=caregiver_visit_count)\n",
+    "base_appt_datetime = visit.report_datetime.replace(microsecond=0)\n",
+    "helper_cls = onschedule_helper_cls(visit.subject_identifier, )\n",
+    "schedule, onschedule_model_cls, schedule_name = helper_cls.get_onschedule_model(\n",
+    "    cohort=cohort,\n",
+    "    caregiver_visit_count=caregiver_visit_count,\n",
+    "    instance=visit)\n",
+    "\n",
+    "schedule.put_on_schedule(\n",
+    "    subject_identifier=visit.subject_identifier,\n",
+    "    onschedule_datetime=base_appt_datetime,\n",
+    "    schedule_name=schedule_name,\n",
+    "    base_appt_datetime=base_appt_datetime)\n",
+    "\n",
+    "onschedule_obj = schedule.onschedule_model_cls.objects.get(\n",
+    "    subject_identifier=visit.subject_identifier,\n",
+    "    schedule_name=schedule_name,\n",
+    "    child_subject_identifier='')\n",
+    "\n",
+    "onschedule_obj.child_subject_identifier = onschedule_obj.child_subject_identifier\n",
+    "onschedule_obj.save()\n",
+    "\n",
+    "sub_history_obj = SubjectScheduleHistory.objects.get(\n",
+    "    subject_identifier=visit.subject_identifier, visit_schedule_name='b1_visit_schedule1',\n",
+    "    schedule_name='b_sec_quart1_schedule1')\n",
+    "\n",
+    "sub_history_obj.onschedule_datetime = onschedule_obj.onschedule_datetime\n",
+    "sub_history_obj.save()\n",
     "\n"
    ],
    "metadata": {
