:adhesive_bandage: ci(Script): Updated redmine_7091 notebook to improve data exception handling
Improved error handling for data exceptions in the RedMine_7091 notebook. Specifically, added more verbose error messages when Appointment data queries do not return any results, and adjusted the execution start and end time metadata for more accurate tracking. This enhancement will streamline a debugging process, improve user experience, and maintain data consistency in the system.

--- a/Notebooks/redmine_7091.ipynb
+++ b/Notebooks/redmine_7091.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-08-11T13:20:07.670555Z",
-     "start_time": "2023-08-11T13:19:58.784630Z"
+     "end_time": "2023-09-13T07:25:26.081598Z",
+     "start_time": "2023-09-13T07:25:16.383Z"
     }
    },
    "outputs": [
@@ -42,8 +42,6 @@
       "/Users/nimrodmunatsi/.venv/flourish/lib/python3.9/site-packages/simple_history/models.py:164: UserWarning: HistoricalRecords added to abstract model (ScheduleModelMixin) without inherit=True\n",
       "  warnings.warn(msg, UserWarning)\n",
       "/Users/nimrodmunatsi/.venv/flourish/lib/python3.9/site-packages/simple_history/models.py:164: UserWarning: HistoricalRecords added to abstract model (VisitModelMixin) without inherit=True\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/Users/nimrodmunatsi/.venv/flourish/lib/python3.9/site-packages/simple_history/models.py:164: UserWarning: HistoricalRecords added to abstract model (OnScheduleModelMixin) without inherit=True\n",
       "  warnings.warn(msg, UserWarning)\n",
       "/Users/nimrodmunatsi/.venv/flourish/lib/python3.9/site-packages/simple_history/models.py:164: UserWarning: HistoricalRecords added to abstract model (OnScheduleModelMixin) without inherit=True\n",
       "  warnings.warn(msg, UserWarning)\n",
@@ -163,9 +161,9 @@
       "Loading Edc Timepoint ...\n",
       " * 'edc_appointment.appointment' is a timepoint model.\n",
       " * 'edc_appointment.historicalappointment' is a timepoint model.\n",
-      " * 'pre_flourish.appointment' is a timepoint model.\n",
       " * 'flourish_child.appointment' is a timepoint model.\n",
       " * 'flourish_child.historicalappointment' is a timepoint model.\n",
+      " * 'pre_flourish.appointment' is a timepoint model.\n",
       " Done loading Edc Timepoint.\n"
      ]
     }
@@ -188,8 +186,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "DoesNotExist",
+     "evalue": "Appointment matching query does not exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mDoesNotExist\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 22\u001B[0m\n\u001B[1;32m     17\u001B[0m visit_codes \u001B[38;5;241m=\u001B[39m [\n\u001B[1;32m     18\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2001M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2002M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2003M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2004M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2005M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2006M\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m2007M\u001B[39m\u001B[38;5;124m'\u001B[39m\n\u001B[1;32m     19\u001B[0m ]\n\u001B[1;32m     21\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m visit_code \u001B[38;5;129;01min\u001B[39;00m visit_codes:\n\u001B[0;32m---> 22\u001B[0m     appointment \u001B[38;5;241m=\u001B[39m \u001B[43mAppointment\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mobjects\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m     23\u001B[0m \u001B[43m        \u001B[49m\u001B[43msubject_identifier\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mB142-040990804-2\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mvisit_code\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m2001M\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m     24\u001B[0m \u001B[43m        \u001B[49m\u001B[43mschedule_name\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mb_sec_quart1_schedule1\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     25\u001B[0m     appointment\u001B[38;5;241m.\u001B[39mdelete()\n\u001B[1;32m     27\u001B[0m apt \u001B[38;5;241m=\u001B[39m visit\u001B[38;5;241m.\u001B[39mappointment\n",
+      "File \u001B[0;32m~/.venv/flourish/lib/python3.9/site-packages/django/db/models/manager.py:85\u001B[0m, in \u001B[0;36mBaseManager._get_queryset_methods.<locals>.create_method.<locals>.manager_method\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m     84\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mmanager_method\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs):\n\u001B[0;32m---> 85\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_queryset\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/.venv/flourish/lib/python3.9/site-packages/django/db/models/query.py:429\u001B[0m, in \u001B[0;36mQuerySet.get\u001B[0;34m(self, *args, **kwargs)\u001B[0m\n\u001B[1;32m    427\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m clone\u001B[38;5;241m.\u001B[39m_result_cache[\u001B[38;5;241m0\u001B[39m]\n\u001B[1;32m    428\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m num:\n\u001B[0;32m--> 429\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39mDoesNotExist(\n\u001B[1;32m    430\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m matching query does not exist.\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m\n\u001B[1;32m    431\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39m_meta\u001B[38;5;241m.\u001B[39mobject_name\n\u001B[1;32m    432\u001B[0m     )\n\u001B[1;32m    433\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39mMultipleObjectsReturned(\n\u001B[1;32m    434\u001B[0m     \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mget() returned more than one \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m -- it returned \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m!\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m%\u001B[39m (\n\u001B[1;32m    435\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mmodel\u001B[38;5;241m.\u001B[39m_meta\u001B[38;5;241m.\u001B[39mobject_name,\n\u001B[1;32m    436\u001B[0m         num \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m limit \u001B[38;5;129;01mor\u001B[39;00m num \u001B[38;5;241m<\u001B[39m limit \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmore than \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m'\u001B[39m \u001B[38;5;241m%\u001B[39m (limit \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m),\n\u001B[1;32m    437\u001B[0m     )\n\u001B[1;32m    438\u001B[0m )\n",
+      "\u001B[0;31mDoesNotExist\u001B[0m: Appointment matching query does not exist."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from edc_visit_schedule.models import SubjectScheduleHistory\n",
@@ -267,8 +279,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-11T14:12:19.522757Z",
-     "start_time": "2023-08-11T14:12:16.110693Z"
+     "end_time": "2023-09-13T07:59:37.216891Z",
+     "start_time": "2023-09-13T07:59:34.581059Z"
     }
    }
   },
